--- a/polybar.config
+++ b/polybar.config
@@ -17,10 +17,11 @@
 ;==========================================================
 
 [colors]
-background = #000000
-background-alt = 
-foreground = #B14E4E
-primary = #B14E4E
+background = #461320
+background-alt = #8C461320
+foreground = #f5f5f5
+foreground-alt = #33f5f5f5
+primary = #fdd835
 secondary = #FF9191
 alert =  #FF9191
 disabled = #FF9191
@@ -42,7 +43,7 @@ foreground = ${colors.foreground}
 
 line-size = 2.8pt
 
-border-size = 0pt 
+border-size = 0pt
 border-color = #00
 
 padding-left = 1
@@ -55,7 +56,7 @@ module-margin = 1
 
 font-0 = Monofur;2
 
-modules-left =  xworkspaces 
+modules-left =  xworkspaces
 modules-right = pulseaudio date
 modules-center = xwindow
 
